# youtube_minder_st

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  redeploy.sh  requirements.txt
app/: config.py  downloader.py  main.py  summarizer.py  transcriber.py  utils.py
src/youtube_minder/: __init__.py  config.py
src/youtube_minder/services/: __init__.py  downloader.py  notes.py  qa.py  renderer.py  summarizer.py  transcriber.py
src/youtube_minder/templates/: notes_guide.md  notes_wrapper.html
src/youtube_minder/ui/: __init__.py  streamlit_app.py
src/youtube_minder/utils/: hashing.py
src/youtube_minder/workflows/: __init__.py  processor.py
tests/: conftest.py  test_downloader_basics.py
